<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mandarindoku</string>

    <!--   navigation-->
    <string name="to_game">Game</string>
    <string name="to_dictionary">Dictionary</string>
    <string name="dict_icon_title">Dictionary</string>
    <string name="help_icon_title">Help</string>
    <string name="board_icon_title">Game</string>
    <string name="check_icon_title">Done</string>
    <string name="menu_game">Game</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_profile">Settings</string>
    <string name="binding_null">Fragment Binding is null</string>

    <!-- game screen -->
    <string name="check_again">There is an error somewhere, check again!</string>
    <string name="game_succesful">Hooray, you\'ve finished the game!</string>
    <string name="selectCharactersButton">Select</string>
    <string name="randomButton">Random</string>
    <string name="randomOrSelect">Random characters or selected?</string>
    <string name="yesButton">Yes</string>
    <string name="cancelButton">Cancel</string>
    <string name="confirmRefresh">Refresh the game?</string>
    <string name="confirmRefreshButton">Refresh</string>
    <string name="clear_cell_button">Clear cell button</string>
    <string name="refresh_button">Refresh game button</string>
    <string name="refresh">New game</string>
    <string name="game_finished">Congratulations!</string>
    <string name="time_formatted">%02d:%02d:%02d</string>

    <!--    dictionary screen-->
    <string name="dict_is_empty">Your dictionary is empty. Add some characters please!</string>
    <string name="search_icon_title">Search</string>
    <string name="usages_hint">usages</string>
    <string name="translation_hint">translation</string>
    <string name="pinyin_hint">pinyin</string>
    <string name="character_hint">字</string>
    <string name="confirmDeleteButton">Delete</string>
    <string name="confirmDelete">Delete?</string>
    <string name="confirmStartGame">Nine characters all ready! Let\'s start?</string>
    <string name="confirmStartButton">Start</string>
    <string name="added">Done!</string>
    <string name="no_char">Character is missing</string>
    <string name="too_many">There should be only 1 character</string>
    <string name="checked">Checked</string>
    <string name="go_to_details">Go to details</string>
    <string name="play_button">Play button</string>
    <string name="add_new_button">Add new character button</string>
    <string name="choose_cat">Category:</string>
    <string name="add_cat_button">Add a category</string>
    <string name="new_cat">new category</string>
    <string name="default_category">All</string>
    <string name="okButton">OK</string>
    <string name="choose_level">Level:</string>
    <string name="big_char" translatable="false">Big char</string>
    <string name="default_dict_text">Here you can add your own characters or symbols to the dictionary\nand then use them for the sudoku game. Or use</string>
    <string name="import_button_in_settings">Import</string>
    <string name="settings_suggest">to get your own or our free dictionaries!</string>
    <string name="filter">Filter</string>
    <string-array name="default_cat_array">
        <item>All</item>
    </string-array>

    <!--    Settings screen-->
    <string name="help_game">You can mark the selected cell as doubtful with a long click on the cell.\n\nThe button on the right erases the selected cell value.\n\nYour game board is saved every time you leave.\n\nLong click on a character button below will show you its information from the dictionary.\n\nClick on refresh arrow to get a new game.</string>
    <string name="help_dict">Swipe left to delete the character from the dictionary.\n\nSelect characters for the game with a long click.\n\nThe play button will become active once you have selected 9 characters.\n\nYou can add a new category or delete an old one when adding or editing characters.</string>
    <string name="not_enough">There has to be 9 characters selected to start the game</string>
    <string name="export_dict">Dictionary export and import</string>
    <string name="records_title">Your best games</string>
    <string name="file_saved">saved to: sdcard/Android/data/com.panasetskaia.charactersudoku/files</string>
    <string name="to_csv">to .csv</string>
    <string name="to_json">to .json</string>
    <string name="export_explain">You can export your dictionary to a .csv or to a .json file.\n\n- CSV is basically a spreadsheet (and you can use in MS Excel)\n\n- JSON file can be used to transfer the dictionary to Mandarindoku app on another device</string>
    <string name="import_explain">Import your dictionary from another device using .json file</string>
    <string name="from_json">from .json</string>
    <string name="new_dict_added">External dictionary added</string>
    <string name="invalid_dict">The file is not a correct dictionary</string>
    <string name="lvl1">EASY</string>
    <string name="lvl2">MEDIUM</string>
    <string name="lvl3">HARD</string>
    <string name="not_found">Not found</string>
    <string name="new_user">New user</string>
    <string name="login_button">Sign in</string>
    <string name="my_records">My top results</string>
    <string name="import_export">Import and share</string>
    <string name="help">Help</string>
    <string name="dictionary">Dictionary</string>
    <string name="profile_settings">Profile &amp; settings</string>
    <string name="expimp">Export/import</string>
    <string name="top_results">Top results</string>
    <string name="soon">Coming soon!</string>
    <string name="ok">OK</string>
    <string name="download_free_explain">Registered users can import our free HSK-1 level dictionary (300 Chinese characters).</string>
    <string name="good_luck">Good luck with your learning!</string>
    <string name="free_download_hsk1_en">get free HSK1 (English)</string>
    <string name="free_download_hsk1_ru">get free HSK1 (Russian)</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="login_with_email"> Sign in with email</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="new_user_question">A new user? </string>
    <string name="sign_up">Sign up with email</string>
    <string name="or"> or:</string>
    <string name="sign_in">Sign in</string>
    <string name="web_client_id" translatable="false">33541923009-ndg2fjattuvh73iv1f3f5m2r6837590l.apps.googleusercontent.com</string>
    <string name="welcome">Welcome!</string>
    <string name="register_with_email">You can sign up here</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="password_not_match">Passwords don\'t match!</string>
    <string name="logout_button">Sign out</string>
    <string name="already_in_use">The email address is already in use</string>
    <string name="too_weak">This password is too weak</string>
    <string name="signup_error">For a reason unknown, sign-up failed</string>
    <string name="our_dear_user">Our dear user</string>
    <string name="importing_eng">Importing dictionary in English!</string>
    <string name="importing_ru">Importing dictionary in Russian!</string>

</resources>