<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dict_export_import_icon"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/export_dict"
        app:showAsAction="always" />
    <item
        android:id="@+id/dict_filter_icon"
        android:icon="@drawable/ic_filter_stroke_and_fill"
        android:title="@string/help_icon_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/dict_help_icon"
        android:icon="@drawable/ic_question_stroke_and_fill"
        android:title="@string/help_icon_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/sudoku_icon"
        android:icon="@drawable/ic_sudoku_icon_stroke_and_fill"
        android:title="@string/board_icon_title"
        app:showAsAction="always" />
</menu>