<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="178dp"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_confirmRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/confirmRefresh"
            android:layout_marginTop="32dp"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="24dp"
            android:text="@string/ok"
            android:gravity="center"
            style="@style/PrettyButtonNoBackgroundTint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirmRefresh"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/primaryLightColor"
            android:background="@drawable/rounded_shape"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="24dp"
            android:text="@string/cancelButton"
            android:gravity="center"
            style="@style/TextButtonNoBackgroundTint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/confirm_button"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirmRefresh"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_shape"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>