<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="150dp"
    android:layout_margin="16dp"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/primaryTextColor"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.dialogFragments.RandomOrSelectDialogFragment"
    android:elevation="16dp"
    app:shapeAppearance="@style/Rounded">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/chosen_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/chosen_background"/>

        <TextView
            android:id="@+id/tv_randomOrSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/randomOrSelect"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/randomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallButtonStyle"
            android:text="@string/randomButton"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_randomOrSelect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/selectCharactersButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/selectCharactersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallButtonStyle"
            android:text="@string/selectCharactersButton"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_randomOrSelect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/randomButton"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>


